fixed torrent overlap

--- a/css/index.css
+++ b/css/index.css
@@ -207,7 +207,9 @@ div.weathertitle{
 }
 
 div.weather {
-	
+	width:100%;
+	padding-left:17px;
+	display:inline-block;
 	margin: 0 auto;
 	font-size: 12px;
 	font-weight: bold;
